# Akkurate

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: WINDOWS_BUILD.md
packaging/arch/: PKGBUILD
scripts/: build-release.sh  build-windows.sh
src/: lib.rs  main.rs
src/api/: gemini.rs  mod.rs
src/config/: mod.rs  settings.rs
src/core/: checker.rs  enhancer.rs  mod.rs  presets.rs
src/ui/: app.rs  i18n.rs  mod.rs  popup.rs  theme.rs
