[package]
name = "akkurate"
version = "0.1.0"
edition = "2021"
description = "A Grammarly-like grammar assistant for Linux, powered by Gemini API"
authors = ["Yuan"]
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP & API
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# GUI (Wayland-native)
iced = { version = "0.13", features = ["tokio"] }

# System integration
arboard = "3"           # Clipboard (Wayland support)

[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.2"            # System tray (SNI/Wayland)

# Config
toml = "0.8"
directories = "5"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4.5.53", features = ["derive"] }
